# Vidar-Blue

./: README.md
ESP_GPIO_TEST/ahu/: CMakeLists.txt  README.md  app.overlay  prj.conf
ESP_GPIO_TEST/ahu/src/: main.c
ESP_GPIO_TEST/blinky/: CMakeLists.txt  esp32.overlay
ESP_GPIO_TEST/blinky/src/: main.c
ESP_GPIO_TEST/scu/: README.md  esp32.overlay
ESP_GPIO_TEST/scu/src/: main.c
esp/: CMakeLists.txt  mypython.py  prj.conf
esp/src/: main.c  main_python.py
flower/: circuitplayground-4011-project (3).uf2  circuitplayground-4011-project (9).uf2
thingy/: CMakeLists.txt  app.overlay  prj.conf
thingy/src/: ble.c  ble.h  main.c
